--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
+    "firebase": "^9.8.1",
+    "firebase-tools": "^11.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hover-video-player": "^9.5.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
